--- a/Wonton.Test/Wonton.Test.csproj
+++ b/Wonton.Test/Wonton.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,6 +16,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wonton.Common\Wonton.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="AlarmClock.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="AlarmClock_fde_dc.bit">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
