--- a/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
+++ b/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
-    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
+    <!-- <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" /> -->
   </ItemGroup>
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
