--- a/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
+++ b/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
@@ -17,8 +17,16 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
-    <!-- <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" /> -->
   </ItemGroup>
+
+  <ItemGroup Condition=" '$(OS)' != 'Unix' ">
+    <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
+  </ItemGroup>
+
+  <PropertyGroup Condition=" '$(OS)' != 'Unix' ">
+    <DefineConstants>Windows</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
