--- a/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
+++ b/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
@@ -12,7 +12,7 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ElectronNET.API" Version="7.30.2" />
+    <!--<PackageReference Include="ElectronNET.API" Version="7.30.2" />-->
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.2" />
@@ -63,6 +63,7 @@
   </Target>
   <ItemGroup>
     <ProjectReference Include="..\Wonton.Common\Wonton.Common.csproj" />
+    <ProjectReference Include="..\Electron.NET\ElectronNET.API\ElectronNET.API.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
