--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,7 +133,7 @@ jobs:
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
   
-  - powershell: ./tools/dotnet-cake -useMagic=false --releaseDir="$(Build.ArtifactStagingDirectory)"
+  - powershell: ./tools/dotnet-cake -useMagic=false -releaseDir="$(Build.ArtifactStagingDirectory)"
     displayName: 'Build on Windows'
 
   - task: PublishPipelineArtifact@1
@@ -141,6 +141,31 @@ jobs:
       targetPath: '$(Build.ArtifactStagingDirectory)'
       publishLocation: 'pipeline'
       artifactName: 'Wonton.Windows'
+
+- job: Windows2
+  pool:
+    vmImage: 'windows-latest'
+  steps:
+  - checkout: self
+    submodules: true
+    persistCredentials: true
+    
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '3.1.x'
+  
+  - script: dotnet tool install --tool-path tools Cake.Tool
+    displayName: 'Install Cake'
+  
+  - powershell: ./tools/dotnet-cake -useMagic=false -FxDeps=true -releaseDir="$(Build.ArtifactStagingDirectory)"
+    displayName: 'Build on Windows'
+
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(Build.ArtifactStagingDirectory)'
+      publishLocation: 'pipeline'
+      artifactName: 'Wonton.Windows2'
 
 - job: GithubRelease
   pool: 
