--- a/Wonton.CrossUI.Web.HostApp/package.json
+++ b/Wonton.CrossUI.Web.HostApp/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^12.0.12",
     "@types/portscanner": "^2.1.0",
     "electron": "^8.2.0",
+    "electron-builder": "^22.4.1",
     "typescript": "^3.8.3"
   },
   "build": {
