更新窗口启动

--- a/Wonton.CrossUI.Web.HostApp/package.json
+++ b/Wonton.CrossUI.Web.HostApp/package.json
@@ -30,9 +30,9 @@
     "typescript": "^3.8.3"
   },
   "build": {
-    "appId": "edu.Wonton.CrossUI.Web.app",
+    "appId": "edu.Wonton.app",
     "productName": "Wonton",
-    "copyright": "Copyright ? 2019 Wang Yu",
+    "copyright": "Copyright © 2019 Wang Yu",
     "compression": "maximum",
     "directories": {
       "output": "../../../../Wonton.CrossUI.Web/bin/Desktop"
