--- a/Wonton.CrossUI.Web/ClientApp/package.json
+++ b/Wonton.CrossUI.Web/ClientApp/package.json
@@ -4,41 +4,41 @@
   "author": "Wang Yu",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-regular-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "babel-eslint": "10.0.3",
-    "bootstrap": "^4.1.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "babel-eslint": "10.1.0",
+    "bootstrap": "^4.4.1",
     "electron-is": "^3.0.0",
     "is-electron": "^2.2.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "merge": "^1.2.1",
-    "oidc-client": "^1.9.0",
-    "react": "^16.0.0",
+    "oidc-client": "^1.10.1",
+    "react": "^16.13.1",
     "react-burger-menu": "^2.6.13",
     "react-canvas": "^1.3.0",
-    "react-dom": "^16.0.0",
-    "react-grid-layout": "^0.17.1",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.3.0",
+    "react-dom": "^16.13.1",
+    "react-grid-layout": "^0.18.3",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
     "react-switch": "^5.0.1",
     "react-transition-group": "^4.3.0",
-    "reactstrap": "^6.3.0",
-    "rimraf": "^2.6.2"
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
-    "ajv": "^6.9.1",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.6.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^2.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.11.1",
-    "typescript": "^3.7.4"
+    "ajv": "^6.12.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3"
   },
   "eslintConfig": {
     "extends": "react-app"
