--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ osx_image: xcode11.3
 env:
   - CI=false
 
-cache:
-  directories:
-    - "Wonton.CrossUI.Web/ClientApp/node_modules"
+# cache:
+#   directories:
+#     - "Wonton.CrossUI.Web/ClientApp/node_modules"
 
 before_install:
   - dotnet tool install --tool-path tools Cake.Tool
