--- a/Wonton.CrossUI.Web/ClientApp/package.json
+++ b/Wonton.CrossUI.Web/ClientApp/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "merge": "^1.2.1",
+    "nan": "^2.14.0",
     "oidc-client": "^1.10.1",
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.13",
