--- a/Wonton.CrossUI.Web/ClientApp/package.json
+++ b/Wonton.CrossUI.Web/ClientApp/package.json
@@ -30,6 +30,7 @@
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {
+    "acorn": "^7.1.1",
     "ajv": "^6.12.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
