--- a/Wonton.CrossUI.Web.HostApp/package.json
+++ b/Wonton.CrossUI.Web.HostApp/package.json
@@ -25,8 +25,8 @@
     "@types/node": "^12.0.12",
     "@types/portscanner": "^2.1.0",
     "cross-env": "^7.0.2",
-    "electron": "^8.2.2",
-    "electron-builder": "^22.4.1",
+    "electron": "9.1.0",
+    "electron-builder": "^22.7.0",
     "typescript": "^3.8.3"
   },
   "build": {
