新增chocolatey包支持

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -258,6 +258,7 @@ jobs:
   - macOS
   - macOS14
   - Windows
+  - Windows2
   steps:
   - checkout: self
     submodules: true
@@ -289,3 +290,24 @@ jobs:
       releaseNotesSource: 'inline'
       addChangeLog: false
   
+# - job: ChocolateyRelease
+#   pool:
+#     vmImage: 'windows-latest'
+#   dependsOn:
+#   - Windows
+#   steps:
+#   - checkout: self
+#     submodules: true
+#     persistCredentials: true
+  
+#   - task: DownloadPipelineArtifact@2
+#     inputs:
+#       buildType: 'current'
+#       itemPattern: '**'
+#       targetPath: '$(System.DefaultWorkingDirectory)/Build'
+
+#   - pwsh: ./PackageManager/chocolatey/CreateChocoPackage.ps1
+#     displayName: 'Create Chocolatey Package'
+  
+#   - pwsh: ./PackageManager/chocolatey/UploadChocoPackage.ps1
+#     displayName: 'Upload Chocolatey Package'
