--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -268,7 +268,13 @@ jobs:
     inputs:
       buildType: 'current'
       itemPattern: '**'
-      targetPath: '$(Build.ArtifactStagingDirectory)'
+      targetPath: '$(System.DefaultWorkingDirectory)/Build'
+
+  - script: dotnet tool install --tool-path tools Cake.Tool
+    displayName: 'Install Cake'
+  
+  - bash: ./tools/dotnet-cake -target="CopyToRelease" -useMagic=false -releaseDir="$(Build.ArtifactStagingDirectory)"
+    displayName: 'Copy Release'
 
   - script: |
       ls -la $(Build.ArtifactStagingDirectory)
@@ -300,7 +306,7 @@ jobs:
       itemPattern: '**'
       targetPath: '$(System.DefaultWorkingDirectory)/Build'
 
-  - pwsh: Install-Module EPS -Scope CurrentUser -Force
+  - pwsh: Import-Module EPS -Scope CurrentUser -Force
     displayName: 'Install Dependences'
 
   - pwsh: ./PackageManager/chocolatey/CreateChocoPackage.ps1
