--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -306,10 +306,20 @@ jobs:
       itemPattern: '**'
       targetPath: '$(System.DefaultWorkingDirectory)\Build'
 
+  - script: dotnet tool install --tool-path tools Cake.Tool
+    displayName: 'Install Cake'
+  
+  - bash: ./tools/dotnet-cake -target="CopyToRelease" -useMagic=false -releaseDir="$(Build.ArtifactStagingDirectory)"
+    displayName: 'Copy Release'
+
+  - script: |
+      ls -la $(Build.ArtifactStagingDirectory)
+    displayName: 'List artifacts'
+
   - pwsh: Import-Module EPS -Scope Local -Force
     displayName: 'Install Dependences'
 
-  - pwsh: ./PackageManager/chocolatey/CreateChocoPackage.ps1
+  - pwsh: ./PackageManager/chocolatey/CreateChocoPackage.ps1 -ReleasePath $(Build.ArtifactStagingDirectory)
     displayName: 'Create Chocolatey Package'
   
   - pwsh: ./PackageManager/chocolatey/UploadChocoPackage.ps1
