--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -322,5 +322,5 @@ jobs:
   - pwsh: ./PackageManager/chocolatey/CreateChocoPackage.ps1 -ReleasePath $(Build.ArtifactStagingDirectory)
     displayName: 'Create Chocolatey Package'
   
-  - pwsh: ./PackageManager/chocolatey/UploadChocoPackage.ps1
+  - pwsh: ./PackageManager/chocolatey/UploadChocoPackage.ps1 -CommitSHA $(Build.SourceVersion)
     displayName: 'Upload Chocolatey Package'
