--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ install:
   - dotnet restore Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
 
 script:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ./tools/dotnet-cake -useMagic=false -AdditionalName="macOS.10.14"                 ; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ./tools/dotnet-cake -useMagic=false -targetOS="win" -AdditionalName="travis-ci"   ; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./tools/dotnet-cake -useMagic=false -AdditionalName="ubuntu.16.04"              ; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ./tools/dotnet-cake --useMagic=false --AdditionalName="macOS.10.14"                 ; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ./tools/dotnet-cake --useMagic=false --targetOS="win" --AdditionalName="travis-ci"   ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./tools/dotnet-cake --useMagic=false --AdditionalName="ubuntu.16.04"              ; fi
   # - ./tools/dotnet-cake -useMagic="false"
 
 # deploy交给azure pipelines
