--- a/Wonton.CrossUI.Web.HostApp/package.json
+++ b/Wonton.CrossUI.Web.HostApp/package.json
@@ -27,7 +27,8 @@
     "cross-env": "^7.0.2",
     "electron": "10.3.0",
     "electron-builder": "^22.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "ini": "^1.3.6"
   },
   "build": {
     "appId": "edu.Wonton.app",
